--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="./jquery-1.10.2.min.js" type="text/javascript"></script>
 <script src="./jquery.mobile-1.4.0.min.js" type="text/javascript"></script>
 <style>
+body{margin:0;padding:0;overflow:hidden} iframe{border:0}
 </style>
 <script>
 $(function(){
