--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@ body{margin:0;padding:0;overflow:hidden} iframe{border:0}
 <script>
 $(function(){
 	$("#menuHome").click(function(){
-		$("#content").html("<iframe src=\"http://kingdom0.cgimall.co.kr\" style=\"width:100%;height:100%\" id=\"frames\"></iframe>");
-		$("#frames")[0].src="http://kingdom0.cgimall.co.kr";
+		$.mobile.changePage("http://kingdom0.cgimall.co.kr");
 	});
 	$("#menuCamera").click(function(){
 		navigator.camera.getPicture(function(imageData){
@@ -38,7 +37,7 @@ $(function(){
 <body>
 <div data-role="page" id="mainActivity">
     <div role="page" class="ui-content" id="content">
-    	<iframe src="about:blank" style="width:100%;height:100%;border:0px" id="frames"></iframe>
+    	
     </div>
     <div data-role="footer" data-position="fixed" id="footerMenu">
 		<div data-role="navbar">
