--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ $(function(){
 <body>
 <div data-role="page" id="mainActivity">
     <div role="page" class="ui-content" id="content">
-    	<iframe src="about:blank" style="width:100%;height:100%;border:0px" id="frames"></iframe>
+    	<iframe src="http://kingdom0.cgimall.co.kr" style="width:100%;height:100%;border:0px" id="frames"></iframe>
     </div>
     <div data-role="footer" data-position="fixed" id="footerMenu">
 		<div data-role="navbar">
 			<ul>
-				<li><a href="#" data-icon="home" data-iconpos="top" id="menuHome">링크</a></li>
+				<li><a href="#" data-icon="home" data-iconpos="top" id="menuHome">홈</a></li>
 				<li><a href="#" data-icon="camera" data-iconpos="top" id="menuCamera">등록</a></li>
 				<li><a href="#" data-icon="video" data-iconpos="top" id="menuVideo">기기정보</a></li>
 			</ul>
