--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body{margin:0;padding:0;overflow:hidden} iframe{border:0}
 <script>
 $(function(){
 	$("#menuHome").click(function(){
-		$("#content").html("<iframe src=\"http://kingdom0.cgimall.co.kr\" style=\"width:100%;height:100%\" id=\"frames\"></iframe>");
+		$("#content").html("<iframe src=\"http://m.cafe.daum.net/internet-media\" style=\"width:100%;height:100%\" id=\"frames\"></iframe>");
 		$("#frames")[0].src="http://kingdom0.cgimall.co.kr";
 	});
 	$("#menuCamera").click(function(){
@@ -39,15 +39,22 @@ $(function(){
 		});
 	});
 })
-window.onload=function(){	document.addEventListener("menuButton",function(){
-		$("#footerMenu").fadeToggle(200);
-	});}
+window.onload=function(){
+		document.addEventListener("menubutton",function(){
+			$("#footerMenu").fadeToggle(200);
+		});
+		document.addEventListener("backbutton",function(e){
+			if(!confirm("정말 종료하시겠습니까?")){
+				e.preventDefault();
+			}
+		});
+}
 </script>
 </head>
 <body>
 <div data-role="page" id="mainActivity">
     <div role="page" class="ui-content" id="content">
-    	<iframe src="http://kingdom0.cgimall.co.kr" style="width:100%;height:100%;border:0px" id="frames"></iframe>
+    	<iframe src="http://m.cafe.daum.net/internet-media" style="width:100%;height:100%;border:0px" id="frames"></iframe>
     </div>
     <div data-role="footer" data-position="fixed" id="footerMenu">
 		<div data-role="navbar">
