--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="./jquery-1.10.2.min.js" type="text/javascript"></script>
 <script src="./jquery.mobile-1.4.0.min.js" type="text/javascript"></script>
 <style>
-body{margin:0;padding:0;overflow:hidden} iframe{border:0}
+body{margin:0;padding:0;overflow:hidden} iframe{border:0} .ui-content{width:100%;height:100%;padding:0px;margin:0px;}
 </style>
 <script>
 $(function(){
